# CFD_Optimisations

./: .gitignore  CMakeLists.txt  HCFD  wedge.hmsh
_LEGACY/: IterativeSolvers.hpp  linalg.cpp  linalg.hpp
_LEGACY/Heat/: Heat.cpp  Heat.hpp
_LEGACY/Incompressible/: BoundaryConditions.hpp  ConvectionSchemes.hpp  IncompressibleTest.cpp  SIMPLE.hpp  Viscosity.hpp
_LEGACY/IterativeSolvers/: Base.cpp  ConjugateGradient.cpp  GaussSeidel.cpp
includes/: Global.hpp  Mesh.hpp  Writer.hpp
includes/AoSoA/: BoundaryConditions.hpp  Domain.hpp  Flux.hpp  GradientSchemes.hpp  Limiters.hpp  TimeIntegrators.hpp
includes/Base/: BoundaryConditions.hpp  Domain.hpp  Flux.hpp  GradientSchemes.hpp  Limiters.hpp  TimeIntegrators.hpp
includes/CAoS/: BoundaryConditions.hpp  Domain.hpp  Flux.hpp  GradientSchemes.hpp  Limiters.hpp  TimeIntegrators.hpp
includes/FAoS_CAoS/: BoundaryConditions.hpp  Domain.hpp  Flux.hpp  GradientSchemes.hpp  Limiters.hpp  TimeIntegrators.hpp
includes/SoA/: BoundaryConditions.hpp  Domain.hpp  Flux.hpp  GradientSchemes.hpp  Limiters.hpp  TimeIntegrators.hpp
includes/VEC/: BoundaryConditions.hpp  Domain.hpp  Flux.hpp  GradientSchemes.hpp  Limiters.hpp  TimeIntegrators.hpp
interface/: Export.py  Mesh.py
interface/LEGACY/: Global.py  Import_LEGACY.py  PST.py  Run.py
sols/: AoSoA_1.hsln  Base_1.hsln  CAoS_0.hsln  FAoSCAoS_1.hsln
src/: Mesh.cpp  Test.cpp  Writer.cpp
src/AoSoA/: Domain.cpp  Euler.cpp  Flux.cpp  GaussGreen.cpp  Limiter.cpp
src/Base/: Domain.cpp  Euler.cpp  Flux.cpp  GaussGreen.cpp  Limiter.cpp
src/CAoS/: Domain.cpp  Euler.cpp  (+3 more)
(+55 files in other folders)
